// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField should be tolerant of an undefined value prop 1`] = `
<div
  className="control-group"
>
  <label
    htmlFor="someInput"
  >
    Some Input
  </label>
  <input
    className=""
    name="someInput"
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Type here..."
    type="text"
  />
</div>
`;

exports[`InputField should display errors if touched 1`] = `
<div
  className="control-group"
>
  <input
    className=""
    name="someInput"
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;

exports[`InputField should render 1`] = `
<div
  className="control-group"
>
  <label
    htmlFor="someInput"
  >
    Some Input
  </label>
  <input
    className=""
    name="someInput"
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Type here..."
    type="text"
    value="something"
  />
</div>
`;
